<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translateable="false" tools:ignore="MissingTranslation">Spotify Streamer</string>

    <!-- Action bar strings -->
    <string name="action_set_location">Set country code</string>
    <string name="action_notification_controls">Notification Controls</string>
    <string name="action_settings">Settings</string>
    <!-- Log out of Spotify
    <string name="action_logout">Logout</string> -->

    <!-- Preference strings -->
    <string name="pref_country_code_key">cc_key</string>
    <string name="pref_notification_controls_key">not_ctrl_key</string>
    <string name="pref_notification_lockscreen_key">lockscreen_key</string>

    <string name="pref_country_code">Country Code</string>
    <string name="pref_country_code_title">Select Country Code</string>

    <string name="pref_notification_controls_drawer">Drawer Notification</string>
    <string name="pref_notification_controls_lockscreen">Lockscreen Notification</string>
    <string name="action_set_notification_controls_drawer">Enable drawer notifications</string>
    <string name="action_set_notification_controls_lockscreen">Enable lockscreen notifications</string>

    <string name="pref_set_notctrl_drawer">NotificationDrawer</string>
    <string name="pref_set_notctrl_lockscreen">NotificationLockscreen</string>

    <!-- Top tracks activity label for action bar -->
    <string name="top_tracks_label">Top 10 Tracks</string>

    <!-- Hint for search field -->
    <string name="search_hint">Artist Search</string>

    <!-- Buffering text -->
    <string name="buffering">Sputterfying....</string>

    <!-- No results found text -->
    <string name="no_results_found">No results found for</string>

    <!-- No image found marker -->
    <string  name="no_image_found" translateable="false">No Image Found</string>

    <!-- Bundle keys -->
    <string name="key_artist_name" translateable="false">ArtistName</string>
    <string name="key_artist_id"   translateable="false">ArtistId</string>

    <!-- Accessibility strings -->
    <string name="artist_image">Artist Image</string>
    <string name="track_image">Track Image</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="album_art">Album Art</string>

</resources>

